Aggiunte ricette: cipolle caramellate e baccalà mantecato

--- a/appunti-di-cucina.tex
+++ b/appunti-di-cucina.tex
@@ -194,11 +194,11 @@
 \mainmatter
 \chapter*{Introduzione}
 %\input{metodi/introduzione.tex}
-In questo testo sono raccolte le mie ricette preferite e quelle della mia famiglia. Alcune ricette sono state elaborate da me, altre, trovate sulla rete, su libri o riferite da amici, sono state adattate al mio gusto personale, alle mie esigenze, e alle attrezzature di cui dispongo.
+In questo testo sono raccolte le mie ricette preferite e quelle della mia famiglia. Alcune ricette sono state elaborate da me, altre, trovate sulla rete, su libri o riferite da amici, sono state adattate al mio gusto personale, alle mie esigenze, ai prodotti che utilizzo abitualmente in cucina e alle attrezzature di cui dispongo.
 
-Se le ricette sono state prese da fonti diverse nelle prime righe del testo viene indicata la fonte alla quale si rimanda.
+Se le ricette sono state prese da fonti diverse nelle prime righe del testo viene indicata la fonte alla quale si rimanda per approfondimento o per la licenza di utilizzo.
 
-Tutte queste ricette sono state provate e sono state inserite qui perché mi sono piaciute e ho ritenuto valesse la pena ricordarmele. Questo infatti non è un libro di ricette ma è il mio quaderno di appunti di cucina.
+Tutte queste ricette sono state provate e sono state inserite qui perché mi sono piaciute e ho ritenuto valesse la pena ricordarle. Per questo motivo il presente testo non è un libro di ricette ma è il mio quaderno di \emph{Appunti di cucina}.
 
 
 
@@ -213,6 +213,7 @@ Tutte queste ricette sono state provate e sono state inserite qui perché mi son
 
 \newpage
 \chapter{Sale e preparazioni di base}
+\input{./Ricette/Salse/cipolle-caramellate}
 \input{./Ricette/Salse/maionese}
 \input{./Ricette/Salse/my-magic-dust}
 \input{./Ricette/Salse/salsa-bbq}
@@ -224,6 +225,7 @@ Tutte queste ricette sono state provate e sono state inserite qui perché mi son
 
 \newpage
 \chapter{Secondi di pesce}
+\input{./Ricette/Secondi-di-pesce/baccala-mantecato}
 \input{./Ricette/Secondi-di-pesce/pesce-spada-al-salmoriglio}
 \input{./Ricette/Secondi-di-pesce/tataki-di-tonno-agli-agrumi}
 
