Ricetta: gelato al basilico + capitolo temperature

--- a/appunti-di-cucina.tex
+++ b/appunti-di-cucina.tex
@@ -193,14 +193,14 @@
 
 \mainmatter
 \chapter*{Introduzione}
-%\input{metodi/introduzione.tex}
+
 In questo testo sono raccolte le mie ricette preferite e quelle della mia famiglia. Alcune ricette sono state elaborate da me, altre, trovate sulla rete, su libri o riferite da amici, sono state adattate al mio gusto personale, alle mie esigenze, ai prodotti che utilizzo abitualmente in cucina e alle attrezzature di cui dispongo.
 
 Se le ricette sono state prese da fonti diverse nelle prime righe del testo viene indicata la fonte alla quale si rimanda per approfondimento o per la licenza di utilizzo.
 
 Tutte queste ricette sono state provate e sono state inserite qui perché mi sono piaciute e ho ritenuto valesse la pena ricordarle. Per questo motivo il presente testo non è un libro di ricette ma è il mio quaderno di \emph{Appunti di cucina}.
 
-
+\input{./metodi/temperature.tex}
 
 \newpage
 \chapter{Pane e lievitati}
@@ -252,12 +252,13 @@ Tutte queste ricette sono state provate e sono state inserite qui perché mi son
 \chapter{Dolci}
 \input{./Ricette/Dolci/barrette-energetiche}
 \input{./Ricette/Dolci/bigne}
+\input{./Ricette/Dolci/biscotti-di-natale}
 \input{./Ricette/Dolci/cassatine-siciliane}
 \input{./Ricette/Dolci/cioccolata-in-tazza}
 \input{./Ricette/Dolci/crema-pasticcera}
 \input{./Ricette/Dolci/crostata-di-limone}
+\input{./Ricette/Dolci/gelato-stracciatella-al-basilico}
 \input{./Ricette/Dolci/pancake}
-\input{./Ricette/Dolci/biscotti-di-natale}
 
 
 
