Ricette: riso sushi, penne all'ubriaca

--- a/appunti-di-cucina.tex
+++ b/appunti-di-cucina.tex
@@ -221,7 +221,10 @@ Tutte queste ricette sono state provate e sono state inserite qui perché mi son
 
 \newpage
 \chapter{Primi}
+\input{./Ricette/Primi/penne-ubriaca}
+\input{./Ricette/Primi/riso-per-sushi}
 \input{./Ricette/Primi/risotto-alla-gallinella}
+
 
 \newpage
 \chapter{Secondi di pesce}
