--- a/metodi/temperature.tex
+++ b/metodi/temperature.tex
@@ -1,4 +1,4 @@
-\section{Temperature di cottura}
+\section{Temperature di cottura al cuore}
 Conoscere la temperatura di cottura al cuore di un alimento è fondamentale per poter replicare le ricette senza possibilità di errore e per garantire sempre il miglior risultato possibile anche secondo il proprio gusto personale.
 
 La tabella \ref{temperature-al-cuore} è stata elaborata sul mio gusto personale e facendo prove diverse.
