Modificati margini del documento con margini standard

--- a/appunti-di-cucina.tex
+++ b/appunti-di-cucina.tex
@@ -3,7 +3,7 @@
 \usepackage{multicol}
 \usepackage[italian]{babel}
 \usepackage{makeidx}
-\usepackage[a4paper, total={6in, 8in}]{geometry}
+\usepackage[a4paper]{geometry}
 %\usepackage[%
     %a5paper,
 %    papersize={5.5in,8.5in},
@@ -14,7 +14,7 @@
 %    ]{geometry}
 
 \usepackage{xcolor}
-\usepackage{booktabs}
+\usepackage{booktabs} %Gestione tabelle con \toprule
 \usepackage{graphicx}
 \usepackage[clock]{ifsym}
 \usepackage{cookingsymbols}
