--- a/metodi/temperature.tex
+++ b/metodi/temperature.tex
@@ -1,7 +1,7 @@
 \section{Temperature di cottura al cuore}
-Conoscere la temperatura di cottura al cuore di un alimento è fondamentale per poter replicare le ricette senza possibilità di errore e per garantire sempre il miglior risultato possibile anche secondo il proprio gusto personale.
+Conoscere la temperatura di cottura al cuore di un alimento è utile per poter replicare le ricette senza possibilità di errore e per garantire sempre il miglior risultato possibile secondo il proprio gusto personale.
 
-La tabella \ref{temperature-al-cuore} è stata elaborata sul mio gusto personale e facendo prove diverse.
+La tabella \ref{temperature-al-cuore} è stata elaborata sulla base delle mie preferenze facendo prove con valori diversi.
 
 
 
@@ -11,7 +11,7 @@ La tabella \ref{temperature-al-cuore} è stata elaborata sul mio gusto personale
 Alimento				&	Temp(°C)		&		Note		\\
 \midrule
 Hamburger			& 	62°C 		& Ideale per una cottura media\\
-Braciole di maiale	& 	72°C 		& Temperatura adatta per il maiale in genere che risulterà sicuro e succoso. Non è adatta per cotture di tagli duri tipo costine o pulled pork. \\
+Arista di maiale	& 	71°C 		& Temperatura adatta per il maiale in genere che risulterà sicuro e succoso. Non è adatta per cotture di tagli duri tipo costine o pulled pork. \\
 Pollo ripieno 		& 	71°C 		& Temperatura ideale per qualunque volatile ripieno\\
 Polpettone di manzo	&	75°C 		& Temperatura ideale se si aggiunge pane ammollato nel latte, altrimenti meglio abbassare un po' la temperatura\\
 \bottomrule
