Impostato parametro di spazio sopra agli ingredienti

--- a/appunti-di-cucina.tex
+++ b/appunti-di-cucina.tex
@@ -100,7 +100,7 @@
 %% Optional argument for a  heading within the ingredients section
 \newcommand{\ingredients}[1][]{%
     \if###1##%
-    \newline
+    \vspace{15px}%Spazio supra al titolo ingredienti
     \newline
         {\color{red}\Large\textbf{Ingredienti}}%
     \else
