Sistemate altre cose nel preambolo

--- a/appunti-di-cucina.tex
+++ b/appunti-di-cucina.tex
@@ -56,6 +56,7 @@
     \lfoot{}%
     \rfoot{}%
     \section{#2}%
+
     \if###1##%
     \else
         \begin{center}
@@ -72,7 +73,7 @@
 
 %% Optional arguments for alternate names for these:
 \newcommand{\serves}[1]{%
-	\Fork\Dish\Knife \> #1 porzioni \>
+	\Fork\Dish\Knife \> #1 \>
     %\chead{#1 #2}
 }
 \newcommand{\preptime}[1]{%
@@ -187,6 +188,7 @@
 
 \begin{document}
 \title{Appunti di cucina}
+\author{Max-B}
 
 \maketitle
 \frontmatter
