MOdifiche minori e commento sul pacchetto weather perché non va

--- a/appunti-di-cucina.tex
+++ b/appunti-di-cucina.tex
@@ -17,6 +17,8 @@
 \usepackage{booktabs} %Gestione tabelle con \toprule
 \usepackage{graphicx}
 \usepackage[clock]{ifsym}
+%\usepackage[weather]{ifsym}
+
 \usepackage{cookingsymbols}
 \usepackage{hyperref}
 
@@ -81,7 +83,7 @@
 	%\lfoot{#1 #2}%
 }
 \newcommand{\cooktime}[2][\Oven]{%
-	\Oven \> #2 \>
+	\Gasstove \> #2 \>
 	% \rfoot{#1: #2}%
 }
 \newcommand{\temp}[1]{%
