--- a/metodi/temperature.tex
+++ b/metodi/temperature.tex
@@ -1,3 +1,6 @@
+\section{Simboli utilizzati nel presente testo}
+In questo testo vengono utilizzati alcuni simboli per indicare i parametri della ricetta. \Fork\Dish\Knife \> Indica il numero di porzioni. \Gloves \> indica il tempo di preparazione della ricetta. \Gasstove \> indica il tempo di cottura.
+
 \section{Temperature di cottura al cuore}
 Conoscere la temperatura di cottura al cuore di un alimento è utile per poter replicare le ricette senza possibilità di errore e per garantire sempre il miglior risultato possibile secondo il proprio gusto personale.
 
