--- a/template.tex
+++ b/template.tex
@@ -1,20 +1,25 @@
 \recipe[Introduzione]{Titolo}
-\serves{4}
-\preptime{1 ora}
-\cooktime[Cottura]{30 minuti}
+\serves{4}%<----Numero di porzioni
+\preptime{1 ora}%<---Tempo di preparazione
+\cooktime[]{30 minuti}%<-----Tempo di cottura
 %\vegetarian
 %\freeze
 \begin{ingreds}
+	% Qui gli ingredienti uno sotto all'altro
 
+
+
+% Se vuoi aggiungere gli ingredienti per una preparazione
+% specifica della ricetta usa questi 2 comandi
 %\columnbreak
-%\ingredients[For the Crumble Mixture:]
+%\ingredients[Per il ripieno:]
 
 \end{ingreds}
 
 \begin{method}
 
 
-
+% Esempio di tabella ---------->
 %\begin{table}[h]
 %\begin{tabular}{lcc}
 %\toprule
@@ -33,6 +38,11 @@
 
 \end{method}
 
+% Note
+%\begin{note}
+%\end{note}
+
+% Figura
 %\showit[1.25in]{example-image-b}{This is a picture}
 
 
