Aggiunto comando autore e modificato template

--- a/Ricette/CBT/vitello-tonnato-cbt.tex
+++ b/Ricette/CBT/vitello-tonnato-cbt.tex
@@ -2,7 +2,7 @@
 \serves{4}
 \preptime{1 ora}
 \cooktime{30 minuti}
-\cbt
+\autore{Max}
 \begin{ingreds}
 	500g di girello di vitello
 	erbe aromatiche
