--- a/appunti-di-cucina.tex
+++ b/appunti-di-cucina.tex
@@ -66,6 +66,8 @@
         \end{center}
     \fi
 }
+\newcommand{\autore}[1]{%
+    \rhead{Dal ricettario di: \textbf{#1}}}
 \newcommand{\vegetarian}{%
     \rhead{\large\color{vegcolor}\textbf{V}}}
 \newcommand{\cbt}{%
