--- a/template.tex
+++ b/template.tex
@@ -2,6 +2,7 @@
 \serves{4}%<----Numero di porzioni
 \preptime{1 ora}%<---Tempo di preparazione
 \cooktime[]{30 minuti}%<-----Tempo di cottura
+%\autore{QUI-IL_NOME}
 %\vegetarian
 %\freeze
 \begin{ingreds}
