Aggiunto header: dal ricettario di...

--- a/Ricette/BBQ/bombette-pugliesi.tex
+++ b/Ricette/BBQ/bombette-pugliesi.tex
@@ -2,8 +2,7 @@
 \serves{4}
 \preptime{1 ora}
 \cooktime[Cottura]{40 minuti}
-\vegetarian
-\freeze
+\autore{Max}
 \begin{ingreds}
 	12 fette sottili di coppa di maiale
 	400g di pancetta
