--- a/Ricette/BBQ/involtini-alla-siciliana.tex
+++ b/Ricette/BBQ/involtini-alla-siciliana.tex
@@ -2,6 +2,7 @@
 \serves{4}
 \preptime{1 ora}
 \cooktime[Cottura]{15 minuti}
+\autore{Max}
 \begin{ingreds}
 	6 fette di carpaccio di manzo
 	una cipolla rossa
