--- a/Ricette/BBQ/pollo-marinato-agli-agrumi.tex
+++ b/Ricette/BBQ/pollo-marinato-agli-agrumi.tex
@@ -2,8 +2,7 @@
 \serves{4}
 \preptime{3 ore}
 \cooktime[]{50 minuti}
-%\vegetarian
-%\freeze
+\autore{Max}
 \begin{ingreds}
 	2 petti di pollo
 	2 arance
