--- a/Ricette/BBQ/smoked-chicken-wings.tex
+++ b/Ricette/BBQ/smoked-chicken-wings.tex
@@ -2,6 +2,7 @@
 \serves{4}
 \preptime{1 ora}
 \cooktime[Cottura]{40 minuti}
+\autore{Max}
 \begin{ingreds}
 	12 ali di pollo
 	Salsa BBQ (Vedi ricetta \ref{salsa-bbq})
