--- a/Ricette/CBT/stinco-di-maiale-cbt.tex
+++ b/Ricette/CBT/stinco-di-maiale-cbt.tex
@@ -2,7 +2,7 @@
 \serves{4}
 \preptime{4 giorni}
 \cooktime{24 ore}
-\cbt
+\autore{Max}
 \begin{ingreds}
 	\ingredients[Per la cottura dello stinco:]
 	2 stinchi di maiale
