--- a/Ricette/Pane-e-lievitati/panini-hamburger-veloci.tex
+++ b/Ricette/Pane-e-lievitati/panini-hamburger-veloci.tex
@@ -2,6 +2,7 @@
 \serves{8}
 \preptime{2 ore e 30}
 \cooktime[Cottura]{30 minuti}
+\autore{Max}
 \begin{ingreds}
 	500g di farina 0
 	250g di acqua fredda
