--- a/Ricette/Primi/risotto-alla-gallinella.tex
+++ b/Ricette/Primi/risotto-alla-gallinella.tex
@@ -2,6 +2,7 @@
 \serves{4}
 \preptime{1 ora}
 \cooktime[Cottura]{30 minuti}
+\autore{Max}
 \begin{ingreds}
 	350g di riso carnaroli
 	4 gallinelle di mare di media pezzatura
