--- a/Ricette/Salse/maionese.tex
+++ b/Ricette/Salse/maionese.tex
@@ -2,6 +2,7 @@
 \serves{4}
 \preptime{10 minuti}
 \cooktime[Cottura]{3 minuti (versione pastorizzata)}
+\autore{Max}
 %\vegetarian
 %\freeze
 \begin{ingreds}
