--- a/Ricette/Salse/my-magic-dust.tex
+++ b/Ricette/Salse/my-magic-dust.tex
@@ -2,7 +2,7 @@
 \serves{-}
 \preptime{5 minuti}
 \cooktime{-}
-\vegetarian
+\autore{Max}
 \begin{ingreds}
 	Vedi tabella nella preparazione
 %\columnbreak
