--- a/Ricette/Salse/salsa-bbq.tex
+++ b/Ricette/Salse/salsa-bbq.tex
@@ -2,7 +2,7 @@
 \serves{-}
 \preptime{1 ora}
 \cooktime{10 minuti}
-\vegetarian
+\autore{Max}
 \begin{ingreds}
 	200g di doppio concentrato di pomodoro
 	200g di miele
