--- a/Ricette/Secondi-di-pesce/baccala-mantecato.tex
+++ b/Ricette/Secondi-di-pesce/baccala-mantecato.tex
@@ -2,8 +2,7 @@
 \serves{4}
 \preptime{1 ora}
 \cooktime[Cottura]{20 minuti}
-%\vegetarian
-%\freeze
+\autore{Max}
 \begin{ingreds}
 	1 filetto di baccalà
 	500g latte intero
