--- a/Ricette/Secondi-di-pesce/pesce-spada-al-salmoriglio.tex
+++ b/Ricette/Secondi-di-pesce/pesce-spada-al-salmoriglio.tex
@@ -2,7 +2,7 @@
 \serves{4}
 \preptime{1 ora}
 \cooktime[Cottura]{20 minuti}
-
+\autore{Max}
 \begin{ingreds}
 	\ingredients[Per il salmoriglio:]
 	1 limone con buccia edibile
