--- a/Ricette/Antipasti/mini-hamburger-di-ricciola.tex
+++ b/Ricette/Antipasti/mini-hamburger-di-ricciola.tex
@@ -1,9 +1,10 @@
-\recipe[I mini hamburger di ricciola sono un piatto delicato e leggero adatto per un aperitivo in compagnia.]{Mini hamburger di ricciola}
+\recipe[I mini hamburger di orata sono un piatto delicato e leggero adatto per un aperitivo in compagnia.]{Mini hamburger di orata}
 \serves{4}
 \preptime{1 ora}
 \cooktime{5 minuti}
+\autore{Max}
 \begin{ingreds}
-	200g di ricciola
+	200g orata
 	4 foglie di alloro
 	1 pezzo di porro
 	Pane da hamburgher (Vedi ricetta \ref{panini-hamburger})
@@ -19,11 +20,11 @@
 \begin{method}
 Per prima cosa prepara la panna acida. Fai stufare la cipolla tagliata a striscioline, poi aggiungi il vino e l'aceto e fai ridurre lentamente. Nel frattempo in un padellino fai ridurre la panna. Setaccia e spremi la cipolla. Aggiungila alla panna e fai riposare in frigorifero per qualche ora. Puoi preparare la panna acida il giorno prima conservandola in frigorifero.
 
-Sfiletta la ricciola e prepara una tartare battuta a coltello. Con il coppapasta prepara dei mini hamburger serrandoli con mezza foglia di alloro sui due lati. Lascia riposare gli hamburger in frigorifero.
+Sfiletta l'orata e prepara una tartare battuta a coltello. Con il coppapasta prepara dei mini hamburger serrandoli con mezza foglia di alloro sui due lati. Lascia riposare gli hamburger in frigorifero.
 
 Taglia il porro a juilenne sottili, cospargilo di farina e friggilo in olio di semi di girasole a \temp{170}.
 
-Taglia il pane con il coppapasta che hai usato per preparare gli hamburger e fallo tostare in forno. Cuoci gli hamburger in una padella antiaderente senza esagerare con la cottura. Componi i panini con la panna acida, l'hamburger di ricciola al quale avrai tolto le foglie di alloro e il porro fritto. Puoi fermare i panini con uno stuzzicadente.
+Taglia il pane con il coppapasta che hai usato per preparare gli hamburger e fallo tostare in forno. Cuoci gli hamburger in una padella antiaderente senza esagerare con la cottura. Componi i panini con la panna acida, l'hamburger di orata al quale avrai tolto le foglie di alloro e il porro fritto. Puoi fermare i panini con uno stuzzicadente.
 \end {method}
 	\begin{note}
 		Puoi sistituire la ricciola con branzino o orata.
