--- a/Ricette/Dolci/barrette-energetiche.tex
+++ b/Ricette/Dolci/barrette-energetiche.tex
@@ -2,8 +2,7 @@
 \serves{16 barrette}
 \preptime{1 ora}
 \cooktime{40 minuti}
-\vegetarian
-\freeze
+\autore{Max}
 \begin{ingreds}
 	500g avena
 	3 banane
