--- a/Ricette/Secondi-di-carne/polpettone.tex
+++ b/Ricette/Secondi-di-carne/polpettone.tex
@@ -2,6 +2,7 @@
 \serves{4}
 \preptime{1 ora}
 \cooktime{45 minuti}
+\autore{Max}
 \begin{ingreds}
 	600g di macinato di manzo + una salsiccia di maiale
 	pecorino grattugiato
