Corretto autore nella torta di limone

--- a/Ricette/Dolci/crostata-di-limone.tex
+++ b/Ricette/Dolci/crostata-di-limone.tex
@@ -1,8 +1,8 @@
-\recipe[Questa è la mia torta preferita che prepara molto spesso mia mamma. Non ho idea da dove arrivi questa ricetta deliziosa.]{Crostata di limone e mandorle}
+\recipe[Questa è la mia torta preferita che prepara molto spesso mia mamma. Non so da dove l'abbia presa. La crosticina leggermente croccante sopra, il profumo di mandorle e limone secondo me la rendono fantastica.]{Crostata di limone e mandorle}
 \serves{8}
 \preptime{1 ora}
 \cooktime[Cottura]{40 minuti}
-\autore{Nonna Giuli}
+\autore{MAx (Nonna Giuli)}
 %\vegetarian
 %\freeze
 \begin{ingreds}
