--- a/Ricette/Dolci/crostata-di-limone.tex
+++ b/Ricette/Dolci/crostata-di-limone.tex
@@ -2,7 +2,7 @@
 \serves{8}
 \preptime{1 ora}
 \cooktime[Cottura]{40 minuti}
-\autore{MAx (Nonna Giuli)}
+\autore{Max (Nonna Giuli)}
 %\vegetarian
 %\freeze
 \begin{ingreds}
