Aggiunte note nelle Penne all'ubriaca

--- a/Ricette/Primi/penne-ubriaca.tex
+++ b/Ricette/Primi/penne-ubriaca.tex
@@ -1,4 +1,4 @@
-\recipe[]{Penne all'ubriaca}
+\recipe[Negli anni 90 frequentavamo la Birreria Hobelix di Botteghe di Albinea (RE) che cucinava, e cucina ancora, questo primo particolarmente ricco e gustoso. Variando i pochi ingredienti sono riuscito ad ottenere una versione che mi soddisfa ed è diventata praticamente una ricetta tradizionale di famiglia che ti salva quando ci sono gruppi particolarmente numerosi.]{Penne all'ubriaca}
 \serves{4}
 \preptime{1 ora}
 \cooktime[Cottura]{30 minuti}
@@ -17,31 +17,19 @@
 \end{ingreds}
 
 \begin{method}
-Rosola bene le salsicce sgranate in una padella, aggiungi lo speck tagliato a dadini poi fai sfumare con almeno mezza bottiglia di lambrusco. Lascia evaporare l'alcool e aggiungi la panna. Fai restringere il sugo a fuoco moderato.
+Rosola bene le salsicce sgranate in una padella, aggiungi quasi a fine cottura lo speck tagliato a dadini poi fai sfumare con almeno mezza bottiglia di lambrusco. Lascia evaporare l'alcool e aggiungi la panna. Fai restringere il sugo a fuoco moderato.
 
 Porta a cottura la pasta in acqua salata, poi fai mantecare nel sugo aggiungendo un mestolo di acqua di cottura.
 
 Metti nei piatti e aggiungi abbondante Parmigiano Reggiano grattugiato.
 
-
-%\begin{table}[h]
-%\begin{tabular}{lcc}
-%\toprule
-%	Ingredienti	&	Peso(g)	&	Peso(g)\\
-%\midrule
-%	Paprika		&	40	&	60	\\
-%	Sale		&	33	&	50	\\
-%	Zucchero	&	20	&	30	\\
-%	Cumino		&	2	&	3	\\
-%	Pepe		&	6	&	9	\\
-%	Aglio		&	12	&	18	\\
-%	Origano		&	2	&	3	\\
-%\bottomrule
-%\end{tabular}
-%\end{table}
-
 \end{method}
 
+\begin{note}
+	Accorgimenti importanti per replicare al meglio la ricetta: il vino deve essere secco, corposo e abbondante per dare un bel colore viola alla pasta; la panna deve essere fresca, meglio evitare la panna da cucina; il Parmigiano sopra alla pasta deve essere abbondantissimo.
+
+	Questo è praticamente un piatto unico.
+\end{note}
 %\showit[1.25in]{example-image-b}{This is a picture}
 
 
