Sistemata tabella della Magic Dust

--- a/Ricette/Salse/my-magic-dust.tex
+++ b/Ricette/Salse/my-magic-dust.tex
@@ -1,18 +1,25 @@
-\recipe[]{Rub: My Magic Dust}\label{rub:magic-dust}
+\recipe[Il mix di spezie più famoso del mondo inventato da un ristorante USA (17th Street Bar \& Grill). Su internet si possono trovare diverse versioni poiché la ricetta originale non è mai stata resa nota. Ho preso una di queste ricette e ho adattato gli ingredienti in base a quello che riesco a reperire facilmente e al mio gusto personale.]{Rub: Magic Dust}\label{rub:magic-dust}
 \serves{-}
 \preptime{5 minuti}
 \cooktime{-}
 \autore{Max}
 \begin{ingreds}
-	Vedi tabella nella preparazione
+	40g paprika
+	33g sale
+	20g zucchero
+	12g aglio granulare
+	6g pepe nero
+	2g cumino
+	2g aglio
 %\columnbreak
 %\ingredients[For the Crumble Mixture:]
 
 \end{ingreds}
 
 \begin{method}
-Miscela tutti gli ingredienti e posiziona in un barattolo. Ogni tanto ricorda di scuotere il barattolo. Nella tabella seguente puoi trovare gli ingredienti porzionati in base alla quantità che desideri produrre.
-\begin{table}[h]
+	Miscela tutti gli ingredienti e conserva in un barattolo. Durante la conservazione, ogni tanto ricorda di scuotere il barattolo, per evitare la formazione di grumi. Nella tabella seguente (\ref{magicdust-proporzioni}) puoi trovare gli ingredienti porzionati in base alla quantità che desideri produrre.
+	\begin{table}[h]
+	\begin{center}
 \begin{tabular}{lcc}
 \toprule
 	Ingredienti	&	Peso(g)	&	Peso(g)\\
@@ -26,6 +33,9 @@ Miscela tutti gli ingredienti e posiziona in un barattolo. Ogni tanto ricorda di
 	Origano		&	2	&	3	\\
 \bottomrule
 \end{tabular}
+	\caption{Tabella con le proporzioni variate in base al quantitativo che vuoi produrre}
+		\label{magicdust-proporzioni}
+	\end{center}
 \end{table}
 \end{method}
 
