--- a/Ricette/Pane-e-lievitati/crackers-al-sesamo.tex
+++ b/Ricette/Pane-e-lievitati/crackers-al-sesamo.tex
@@ -1,8 +1,8 @@
-\recipe[]{Crackers al sesamo}
+\recipe[Non so dove mia mamma abbia scoperto questa ricetta. Fare i crackers in casa è facilissimo e sono anche molto buoni.]{Crackers al sesamo}
 \serves{4}
 \preptime{1 ora}
 \cooktime[Cottura]{30 minuti}
-\autore{Nonna Giuli}
+\autore{Max (Nonna Giuli)}
 \begin{ingreds}
 	280g di farina
 	50g di acqua
@@ -13,7 +13,7 @@
 \end{ingreds}
 
 \begin{method}
-	Metti la farina, il sale, il sesamo nella bull della planetaria e mescola. Aggiungi la parte liquida e impasta leggermente con la foglia poi fai riposare la pasta per 20 minuti coperta con una pellicola.
+	Metti la farina, il sale, il sesamo nella bull della planetaria e mescola. Aggiungi la parte liquida e impasta leggermente con la foglia. Fai riposare la pasta per 20 minuti coperta con una pellicola.
 	Tira la pasta con la macchinetta fino alla misura 3 senza ripiegare. Taglia i crackers e mettili sulla leccarda ricoperta di carta da forno.
 
 	Cuoci in forno ventilato a \temp{180} per 25/30 minuti.
