Introduzione ai panini da hamburger

--- a/Ricette/Pane-e-lievitati/panini-hamburger-veloci.tex
+++ b/Ricette/Pane-e-lievitati/panini-hamburger-veloci.tex
@@ -1,4 +1,4 @@
-\recipe[]{Panini da hamburgher veloci}\label{panini-hamburger}
+\recipe[Questa ricetta mi è stata insegnata ad un corso di cucina. Prima facevo i panini con una ricetta molto più lunga e complicata. Con questa ricetta il risultatto non è molto diverso e si perde meno tempo.]{Panini da hamburgher veloci}\label{panini-hamburger}
 \serves{8}
 \preptime{2 ore e 30}
 \cooktime[Cottura]{30 minuti}
