Sistemata ricetta dei mini hamburger di orata

--- a/Ricette/Antipasti/mini-hamburger-di-orata.tex
+++ b/Ricette/Antipasti/mini-hamburger-di-orata.tex
@@ -1,4 +1,4 @@
-\recipe[I mini hamburger di orata sono un piatto delicato e leggero adatto per un aperitivo in compagnia.]{Mini hamburger di orata}
+\recipe[Questa ricetta mi è stata insegnata ad un corso di cucina. La cottura sulla foglia di alloro e la panna acida rendono questa ricetta interessante.]{Mini hamburger di orata}
 \serves{4}
 \preptime{1 ora}
 \cooktime{5 minuti}
@@ -18,14 +18,14 @@
 \end{ingreds}
 
 \begin{method}
-Per prima cosa prepara la panna acida. Fai stufare la cipolla tagliata a striscioline, poi aggiungi il vino e l'aceto e fai ridurre lentamente. Nel frattempo in un padellino fai ridurre la panna. Setaccia e spremi la cipolla. Aggiungila alla panna e fai riposare in frigorifero per qualche ora. Puoi preparare la panna acida il giorno prima conservandola in frigorifero.
+Per prima cosa prepara la panna acida, se vuoi puoi farla anche il giorno prima conservandola in frigo. Fai stufare la cipolla tagliata a striscioline, poi aggiungi il vino e l'aceto e fai ridurre lentamente. Nel frattempo in un padellino fai ridurre la panna. Setaccia e spremi la cipolla. Aggiungila alla panna e fai riposare in frigorifero per qualche ora.
 
 Sfiletta l'orata e prepara una tartare battuta a coltello. Con il coppapasta prepara dei mini hamburger serrandoli con mezza foglia di alloro sui due lati. Lascia riposare gli hamburger in frigorifero.
 
-Taglia il porro a juilenne sottili, cospargilo di farina e friggilo in olio di semi di girasole a \temp{170}.
+Taglia il porro a juilenne sottili, infarinalo e friggilo in olio di semi di girasole a \temp{170}.
 
 Taglia il pane con il coppapasta che hai usato per preparare gli hamburger e fallo tostare in forno. Cuoci gli hamburger in una padella antiaderente senza esagerare con la cottura. Componi i panini con la panna acida, l'hamburger di orata al quale avrai tolto le foglie di alloro e il porro fritto. Puoi fermare i panini con uno stuzzicadente.
 \end {method}
 	\begin{note}
-		Puoi sistituire la ricciola con branzino o orata.
+		Puoi sostituire l'orata con pesci simili: branzino, ricciola, pagello. Anche con il salmone non è mala, ma meno delicato.
 	\end{note}
