Sistemata ricetta del riso per sushi

--- a/Ricette/Primi/riso-per-sushi.tex
+++ b/Ricette/Primi/riso-per-sushi.tex
@@ -1,4 +1,4 @@
-\recipe[Questa ricetta è perfetta per cuocere il riso per il sushi, ma può essere usata anche per la cottura del riso per una poke o per una classica insalata di riso. In commercio esistono diversi prodotti di riso specifico per sushi, ma io preferisco usare il più economico e locale riso Roma.]{Riso per sushi o poke}
+\recipe[Questa riso è perfetto per il sushi, ma può essere usato anche per una poke o per una classica insalata di riso. In commercio esiste il riso specifico per sushi, ma io preferisco usare il più economico e locale riso Roma.]{Riso per sushi, poke o insalata}
 \serves{4}
 \preptime{1 ora}
 \cooktime[Cottura]{13 minuti}
@@ -25,23 +25,6 @@ Occorreranno circa 13 minuti per arrivare alla cottura perfetta. Dopo 10 minuti 
 Se vuoi preparare una insalata di riso o una poke puoi mettere il riso in una ciotola e condirlo come preferisci.
 
 Se devi preparare il sushi questo è il momento di aggiungere il condimento che avrai prima scaldato al microonde per sciogliere perfettamente il sale e lo zucchero nell'aceto di riso.
-
-
-%\begin{table}[h]
-%\begin{tabular}{lcc}
-%\toprule
-%	Ingredienti	&	Peso(g)	&	Peso(g)\\
-%\midrule
-%	Paprika		&	40	&	60	\\
-%	Sale		&	33	&	50	\\
-%	Zucchero	&	20	&	30	\\
-%	Cumino		&	2	&	3	\\
-%	Pepe		&	6	&	9	\\
-%	Aglio		&	12	&	18	\\
-%	Origano		&	2	&	3	\\
-%\bottomrule
-%\end{tabular}
-%\end{table}
 
 \end{method}
 
