--- a/Ricette/Secondi-di-pesce/pesce-spada-al-salmoriglio.tex
+++ b/Ricette/Secondi-di-pesce/pesce-spada-al-salmoriglio.tex
@@ -1,4 +1,4 @@
-\recipe[Il salmoriglio è una salsa delicata, di origini siciliane, a base di olio extravergine di oliva limone e origano. In questa ricetta viene preparata a bagnomaria per estrarre al meglio gli olii essenziali profumati delle erbe aromatiche.]{Pesce spada al salmoriglio}
+\recipe[Il salmoriglio è una salsa delicata, di origini siciliane, a base di olio extravergine d'oliva limone e origano. In questa ricetta viene preparata a bagnomaria per estrarre al meglio gli olii essenziali profumati delle erbe aromatiche.]{Pesce spada al salmoriglio}
 \serves{4}
 \preptime{1 ora}
 \cooktime[Cottura]{20 minuti}
