--- a/Ricette/Secondi-di-carne/nuggets-di-pollo.tex
+++ b/Ricette/Secondi-di-carne/nuggets-di-pollo.tex
@@ -33,7 +33,7 @@ Friggi a \temp{175} per 3 minuti.
 \end {method}
 
 	\begin{note}
-		Puoi congelare i nuggets dopo averli impanati e cuocerli da congelati portando il tempo di cottura a 5 minuti.
+		Puoi congelare i nuggets dopo averli impanati e cuocerli da congelati aumentando il tempo di cottura a 5 minuti.
 
 		Se hai molti nuggets da cuocere, puoi tenere un contenitore con i nuggets già fritti in forno statico alla temperatura di \temp{60} avendo cura di inserire un cucchiaio di legno nello sportello del forno per garantire la fuoriuscita di vapore oppure aprendo lo sportello abbastanza spesso. In questo modo potrai servire tutti i nuggets ancora caldi contemporaneamente.
 	\end{note}
