Specificate erbe aromatiche

--- a/Ricette/Secondi-di-carne/polpettone.tex
+++ b/Ricette/Secondi-di-carne/polpettone.tex
@@ -11,7 +11,7 @@
 	2 uova
 	sale
 	pepe
-	erbe aromatiche
+	prezzemolo, timo o altre erbe aromatiche
 	prosciutto cotto
 	provola o scamorza
 	pangrattato
