Corrette eliche di pollo

--- a/Ricette/BBQ/eliche-di-pollo-al-curry.tex
+++ b/Ricette/BBQ/eliche-di-pollo-al-curry.tex
@@ -1,13 +1,13 @@
-\recipe[]{Eliche di pollo al curry}
+\recipe[Una ricetta adatta da accompagnare ad un aperitivo o come secondo.]{Eliche di pollo al curry}
 \serves{4}
 \preptime{1 ora}
-\cooktime[Cottura]{6 minuti}
+\cooktime[]{6 minuti}
 \autore{Max}
 \begin{ingreds}
 	1 petto di pollo
-	sale
+	mezzo cucchiaino di sale
+	un cucchiaino curry
 	olio evo
-	curry
 	pan grattato
 \end{ingreds}
 
