Sistemata ricetta degli involtini alla siciliana

--- a/Ricette/BBQ/involtini-alla-siciliana.tex
+++ b/Ricette/BBQ/involtini-alla-siciliana.tex
@@ -12,13 +12,15 @@
 	pane raffermo
 	pangrattato
 	un bicchiere di latte
-	qualche foglia di alloro
+	12 foglie di alloro
+	sale
+	pepe
 \end{ingreds}
 
 \begin{method}
 Taglia il carpaccio in modo da formare delle fette triangolari. In genere per ogni fetta di carpaccio è possibile ricavare 2 triangoli.
 
-Prepara la farcia per gli involtini mescolando l'uvetta ammollata e leggermente tritata con il prosciutto cotto tagliato a cubettini, la scamorza e un po' di pane ammollato nel latte e strizzato.
+Prepara la farcia per gli involtini mescolando l'uvetta ammollata e leggermente tritata con il prosciutto cotto tagliato a cubettini, la scamorza e un po' di pane ammollato nel latte e strizzato. Regola di sale e pepe. Non ho specificato le quantità perché si può adattare al proprio gusto personale. Io in genere metto scamorza, prosciutto cotto e pane in parti uguali e sto un po' più scarso con l'uvetta.
 
 Prepara gli involtini con la farcia; mettili in uno spiedo alternati da un petalo di cipolla e una foglia di alloro.
 
