Aggiunta ricetta delle lasagne

--- a/appunti-di-cucina.tex
+++ b/appunti-di-cucina.tex
@@ -174,7 +174,7 @@
         \noindent
         \emph{#1}
         \par
-    \fi
+    \firipieno
     \begingroup
     \parindent0pt
     \parskip0.25em
@@ -228,6 +228,7 @@ Tutte queste ricette sono state provate e sono state inserite qui perché mi son
 
 \newpage
 \chapter{Primi}
+\input{./Ricette/Primi/lasagne}
 \input{./Ricette/Primi/penne-ubriaca}
 \input{./Ricette/Primi/riso-per-sushi}
 \input{./Ricette/Primi/risotto-alla-gallinella}
