Corretta intestazione lasagne

--- a/Ricette/Primi/lasagne.tex
+++ b/Ricette/Primi/lasagne.tex
@@ -1,4 +1,4 @@
-\recipe[Questa è la mia ricetta delle lasagne, tarata sulla dimensione dei miei stampi]{Lasagne}
+\recipe[Questa è la mia ricetta delle lasagne; le proporzioni degli ingredienti sono tarate sulla dimensione della mia teglia per ridurre lo spreco.]{Lasagne}
 \serves{6}%<----Numero di porzioni
 \preptime{3 ore}%<---Tempo di preparazione
 \cooktime[]{3 ore}%<-----Tempo di cottura
