--- a/appunti-di-cucina.tex
+++ b/appunti-di-cucina.tex
@@ -232,6 +232,7 @@ Tutte queste ricette sono state provate e sono state inserite qui perché mi son
 \input{./Ricette/Primi/penne-ubriaca}
 \input{./Ricette/Primi/riso-per-sushi}
 \input{./Ricette/Primi/risotto-alla-gallinella}
+\input{./Ricette/Primi/carbonara}
 
 
 \newpage
