--- a/appunti-di-cucina.tex
+++ b/appunti-di-cucina.tex
@@ -16,8 +16,6 @@
 \usepackage{xcolor}
 \usepackage{booktabs} %Gestione tabelle con \toprule
 \usepackage{graphicx}
-\usepackage[clock]{ifsym}
-%\usepackage[weather]{ifsym}
 
 \usepackage{cookingsymbols}
 \usepackage{hyperref}
@@ -44,8 +42,8 @@
 
 %% Vary the colors at will
 
-\definecolor{vegcolor}{rgb}{0,0.5,0.2}
-\definecolor{frzcolor}{rgb}{0,0,1}
+%\definecolor{vegcolor}{rgb}{0,0.5,0.2}
+%\definecolor{frzcolor}{rgb}{0,0,1}
 
 % Your "recipes.sty" package starts here:
 %% Thanks to alephzero for the excellent start:
@@ -68,12 +66,12 @@
 }
 \newcommand{\autore}[1]{%
     \rhead{Dal ricettario di: \textbf{#1}}}
-\newcommand{\vegetarian}{%
-    \rhead{\large\color{vegcolor}\textbf{V}}}
-\newcommand{\cbt}{%
-    \rhead{\large\color{vegcolor}\textbf{CBT}}}
-\newcommand{\freeze}{%
-    \lhead{\large\color{frzcolor}\textbf{F}}}
+%\newcommand{\vegetarian}{%
+%    \rhead{\large\color{vegcolor}\textbf{V}}}
+%\newcommand{\cbt}{%
+%    \rhead{\large\color{vegcolor}\textbf{CBT}}}
+%\newcommand{\freeze}{%
+%    \lhead{\large\color{frzcolor}\textbf{F}}}
 
 %% Optional arguments for alternate names for these:
 \newcommand{\serves}[1]{%
