Sistemata ricetta della carbonara

--- a/Ricette/Primi/carbonara.tex
+++ b/Ricette/Primi/carbonara.tex
@@ -1,4 +1,4 @@
-\recipe[Per la carbonara uso 2 ricette a seconda del numero di commensali. Per 4 persone faccio una ricetta diretta, se sono più di 4 preferisco non rischiare di cuocere l'uovo e faccio la versione scientifica di bbq4all.]{Spagatti alla carbonara}
+\recipe[Per la carbonara uso 2 ricette a seconda del numero di commensali. Per 4 persone faccio una ricetta diretta, se sono più di 4 preferisco non rischiare di cuocere l'uovo e faccio la versione scientifica di bbq4all.]{Spaghetti alla carbonara}
 \serves{4}%<----Numero di porzioni
 \preptime{30 minuti}%<---Tempo di preparazione
 \cooktime[]{13 minuti}%<-----Tempo di cottura
@@ -21,17 +21,17 @@
 \end{ingreds}
 
 \begin{method}
-	\underline{Ricetta diretta}. Mentre porti a bollore l'acqua salata per la pasta taglia a cubetti il guanciale e lo fallo rosolare. Quando ha raggiunto il grado di cottura che preferisci spegni e lascia raffreddare. Se vuoi renderla più leggera togli un po' di grasso del guanciale che potrai conservare in frigorifero per altre preparazioni. 
+	\underline{Ricetta diretta}. Mentre porti a bollore l'acqua salata per la pasta, taglia a cubetti il guanciale e fallo rosolare in una padella ampia. Quando ha raggiunto il grado di doratura che preferisci spegni e lascia raffreddare. Se vuoi renderla più leggera togli un po' di grasso del guanciale con un cucchiaio. Potrai conservare in frigorifero questo grasso per altre preparazioni (es. rosolature di arrosti o bistecche). 
 
 	Quando l'acqua bolle cala gli spaghetti.
 
-	In una ciotola sbatti le uova con il pecorino grattugiato.
+	In una ciotola sbatti le uova con il pecorino grattugiato fino a formare un crema omogenea.
 
-	A cottura ultimata scola gli spaghetti, falli saltare per circa 30 secondi nel guanciale fuori dal fuoco e aggiungi la crema di uova. Aspettando 30 secondi gli spaghetti raggiungeranno la temperatura ideale per cuocere l'uovo senza stracciarlo. Metti nei piatti e aggiungi abbondante pepe.
+	A cottura ultimata scola gli spaghetti, falli saltare fuori dal fuoco assieme al guanciale per circa 30 secondi in modo che si raffreddino leggermente, poi aggiungi la creama di uovo e continua a saltare e mescolare con vigore. Metti nei piatti e aggiungi abbondante pepe.
 
 	\underline{Ricetta scientifica}. Dopo aver rosolato il guanciale come nella ricetta precedente, sbatti le uova con il pecorino. Metti la ciotola in un bagnomaria e continua a sbattere portando la temperatura della crema fra \temp{59} e \temp{63}. Mantieni questa temperatura per circa 15 minuti togliendo dal bagnomaria o rimettendo sul fuoco a seconda della temperatura del composto.
 
-	Quando scoli la pasta, come nella ricetta precedente, falla saltare per 30 secondi con il guanciale in modo da abbassare un po' la temperatura. Poi aggiungi la crema di uovo. La creama preparata in questo modo è più densa della precedente, se necessario aggiungi quanche cucchiaio di acqua di cottura della pasta.
+	Quando scoli la pasta, come nella ricetta precedente, falla saltare per 30 secondi con il guanciale in modo da abbassare un po' la temperatura. Poi aggiungi la crema di uovo. La creama preparata in questo modo è più densa della precedente, se necessario aggiungi qualche cucchiaio di acqua di cottura della pasta per rendere la crema più morbida. Metti nei piatti e aggiungi abbondante pepe nero.
 
 	% Esempio di tabella ---------->
 %\begin{table}[h]
