Risolti errori di compilazione su Ambiente note e su if non chiuso

--- a/Ricette/Dolci/bigne.tex
+++ b/Ricette/Dolci/bigne.tex
@@ -29,9 +29,8 @@ In alternativa puoi cuocere a forno ventilato a \temp{175} per 30 minuti, facend
 	Una volta raffrettati, i bigné possono essere farciti a piacere. Il più classico ripieno è la crema pasticcera (vedi ricetta \ref{crema-pasticcera}).
 \end{method}
 
-\begin{note}
+\subsection*{Note}
 	La parte cruciale di questa ricetta è la cottura della pasta choux in padella. Se cuoci troppo poco poi avranno troppa umidità nel forno e i bigné non lieviteranno correttamente.
-\end{note}
 
 %\showit[1.25in]{example-image-b}{This is a picture}
 
