--- a/Ricette/Dolci/biscotti-di-natale.tex
+++ b/Ricette/Dolci/biscotti-di-natale.tex
@@ -31,10 +31,7 @@ Fai raffreddare.
 
 \end{method}
 
-\begin{note}
+\subsection*{Note}
 		Puoi sostituire lo zucchero con 20g di stevia ma dovrai aggiungere circa mezzo bicchiere di latte e cuocere per circa 10 minuti in più.
 		
 		Con 500g di farina puoi produrre 4 salsicciotti di biscotti.
-
-	\end{note}
-
