--- a/Ricette/Primi/penne-ubriaca.tex
+++ b/Ricette/Primi/penne-ubriaca.tex
@@ -24,12 +24,10 @@ Porta a cottura la pasta in acqua salata, poi fai mantecare nel sugo aggiungendo
 Metti nei piatti e aggiungi abbondante Parmigiano Reggiano grattugiato.
 
 \end{method}
-
-\begin{note}
+\subsection*{Note}
 	Accorgimenti importanti per replicare al meglio la ricetta: il vino deve essere secco, corposo e abbondante per dare un bel colore viola alla pasta; la panna deve essere fresca, meglio evitare la panna da cucina; il Parmigiano sopra alla pasta deve essere abbondantissimo.
 
 	Questo è praticamente un piatto unico.
-\end{note}
 %\showit[1.25in]{example-image-b}{This is a picture}
 
 
