--- a/Ricette/Antipasti/mini-hamburger-di-orata.tex
+++ b/Ricette/Antipasti/mini-hamburger-di-orata.tex
@@ -25,7 +25,7 @@ Sfiletta l'orata e prepara una tartare battuta a coltello. Con il coppapasta pre
 Taglia il porro a juilenne sottili, infarinalo e friggilo in olio di semi di girasole a \temp{170}.
 
 Taglia il pane con il coppapasta che hai usato per preparare gli hamburger e fallo tostare in forno. Cuoci gli hamburger in una padella antiaderente senza esagerare con la cottura. Componi i panini con la panna acida, l'hamburger di orata al quale avrai tolto le foglie di alloro e il porro fritto. Puoi fermare i panini con uno stuzzicadente.
-\end {method}
-	\begin{note}
+\end{method}
+\subsection*{Note}
 		Puoi sostituire l'orata con pesci simili: branzino, ricciola, pagello. Anche con il salmone non è mala, ma meno delicato.
-	\end{note}
+
