Corretto metoso per le note

--- a/template.tex
+++ b/template.tex
@@ -37,9 +37,7 @@
 
 \end{method}
 
-% Note
-%\begin{note}
-%\end{note}
+%\subsection*{Note}
 
 % Figura
 %\showit[1.25in]{example-image-b}{This is a picture}
