--- a/appunti-di-cucina.tex
+++ b/appunti-di-cucina.tex
@@ -4,14 +4,7 @@
 \usepackage[italian]{babel}
 \usepackage{makeidx}
 \usepackage[a4paper]{geometry}
-%\usepackage[%
-    %a5paper,
-%    papersize={5.5in,8.5in},
-%    margin=0.75in,
-%    top=0.75in,
-%    bottom=0.75in,
-    %twoside
-%    ]{geometry}
+
 
 \usepackage{xcolor}
 \usepackage{booktabs} %Gestione tabelle con \toprule
@@ -45,7 +38,7 @@
 
 \newcommand{\recipe}[2][]{%
     \newpage
-    \lhead{}%
+    \lhead{\leftmark} % Titolo del capitolo nell'header
     \chead{}%
     \rhead{}%
     \lfoot{}%
@@ -60,7 +53,7 @@
     \fi
 }
 \newcommand{\autore}[1]{%
-    \rhead{Dal ricettario di: \textbf{#1}}}
+    \rhead{ Dal ricettario di: \textbf{#1}}}
 
 %% Optional arguments for alternate names for these:
 \newcommand{\serves}[1]{%
