--- a/appunti-di-cucina.tex
+++ b/appunti-di-cucina.tex
@@ -188,6 +188,7 @@ Tutte queste ricette sono state provate e sono state inserite qui perché mi son
 \newpage
 \chapter{Primi}
 \input{./Ricette/Primi/lasagne}
+\input{./Ricette/Primi/penne-rosa}
 \input{./Ricette/Primi/penne-ubriaca}
 \input{./Ricette/Primi/riso-per-sushi}
 \input{./Ricette/Primi/risotto-alla-gallinella}
