Ricetta: Pesto dei cappelletti

--- a/appunti-di-cucina.tex
+++ b/appunti-di-cucina.tex
@@ -190,6 +190,7 @@ Tutte queste ricette sono state provate e sono state inserite qui perché mi son
 \input{./Ricette/Primi/lasagne}
 \input{./Ricette/Primi/penne-rosa}
 \input{./Ricette/Primi/penne-ubriaca}
+\input{./Ricette/Primi/pesto-cappelletti}
 \input{./Ricette/Primi/riso-per-sushi}
 \input{./Ricette/Primi/risotto-alla-gallinella}
 \input{./Ricette/Primi/carbonara}
