Note per cappelletti

--- a/Ricette/Primi/pesto-cappelletti.tex
+++ b/Ricette/Primi/pesto-cappelletti.tex
@@ -38,7 +38,8 @@ In una casseruola scalda un po' di burro e fai soffriggere sedano e cipolla trit
 
 \end{method}
 
-%\subsection*{Note}
+\subsection*{Note}
+Le dosi per il pesto sono adatte per 7/8 uova di sfoglia.
 
 % Figura
 %\showit[1.25in]{example-image-b}{This is a picture}
