--- a/appunti-di-cucina.tex
+++ b/appunti-di-cucina.tex
@@ -177,6 +177,7 @@ Tutte queste ricette sono state provate e sono state inserite qui perché mi son
 \chapter{Antipasti}
 \input{./Ricette/Antipasti/mini-hamburger-di-orata}
 
+
 \newpage
 \chapter{Sale e preparazioni di base}
 \input{./Ricette/Salse/cipolle-caramellate}
@@ -233,6 +234,10 @@ Tutte queste ricette sono state provate e sono state inserite qui perché mi son
 \input{./Ricette/Dolci/gelato-stracciatella-al-basilico}
 \input{./Ricette/Dolci/nocciolata}
 \input{./Ricette/Dolci/pancake}
+
+\chapter{Cocktails}
+\input{./Ricette/Cocktails/negroni}
+
 
 
 
