Ricette: soglia e besciamella

--- a/Ricette/Primi/lasagne.tex
+++ b/Ricette/Primi/lasagne.tex
@@ -35,7 +35,7 @@ Per prima cosa prepara il ragù. Fai soffriggere a fuoco vivo la carne macinata,
 
 Prepara la sfoglia impastando le uova con la farina. Avvolgi in una pellicola e lascia riposare in frigorifero.
 
-Prepara la besciamella. Sciogli il burro in una casseruola, aggiungi la farina e fai imbiondire. Scalda il latte senza raggiungere il bollore. Aggiungine poco nel tegame con la farina e mescola con una frusta. Continua ad aggiungere e mescolare per evitare la formazione di grumi. Porta a cottura la besciamella fino a raggiungere una consistenza cremosa. Regola di sale e aggiungi la noce moscata.
+Prepara la besciamella (Vedi anche ricetta \ref{besciamella}). Sciogli il burro in una casseruola, aggiungi la farina e fai imbiondire. Scalda il latte senza raggiungere il bollore. Aggiungine poco nel tegame con la farina e mescola con una frusta. Continua ad aggiungere e mescolare per evitare la formazione di grumi. Porta a cottura la besciamella fino a raggiungere una consistenza cremosa. Regola di sale e aggiungi la noce moscata.
 
 Tira la pasta con la macchinetta fino a raggiungere la penultima misura, ma ripassando 2 volte. Sbollenta la pasta per pochi minuti, poi stendi su un canovaccio.
 
