--- a/appunti-di-cucina.tex
+++ b/appunti-di-cucina.tex
@@ -180,10 +180,12 @@ Tutte queste ricette sono state provate e sono state inserite qui perché mi son
 
 \newpage
 \chapter{Sale e preparazioni di base}
+\input{./Ricette/Basi/besciamella}
 \input{./Ricette/Salse/cipolle-caramellate}
 \input{./Ricette/Salse/maionese}
 \input{./Ricette/Salse/my-magic-dust}
 \input{./Ricette/Salse/salsa-bbq}
+\input{./Ricette/Basi/sfoglia}
 
 
 \newpage
